--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -849,7 +849,7 @@ Now when we run our model, we can see larger networks of Infection links forming
 
 \clearpage
 
-\subsection{Data sets, outputters and external plugins.}
+\subsection{Data Sets, Sinks and External Plugins.}
 Now that we have the model running with turtles, patches and links, we'll explore the creation of simple data sets to create file outputters and even to take advantage of the many plugins available which connect to external tools.
 We launch the Zombies model, if it's not already launched. Once it is up, we go to the Scenario Tree panel underneath the User Panel and carry out the following steps:
 \begin{enumerate}
@@ -875,7 +875,7 @@ Click Add again. This time type in ``Remaining Zombies" for the \emph{Source Nam
 \end{center}
 \end{figure}
 
-At this point you should see the Data Set Editor window looking like Fig.~\ref{fig:datasetcolumns}. Click on Next, then on Finish. Don't forget to save this setting by clicking on the save icon in the top left hand side of the Repast Simphony runtime (Fig.~\ref{fig:save}). Alternatively select Save under the File menu.
+At this point you should see the Data Set Editor window looking like Fig.~\ref{fig:datasetcolumns}. Click on Next, then on Finish to accept the default schedule parameters that describe when the data will be recorded. Don't forget to save this setting by clicking on the save icon in the top left hand side of the Repast Simphony runtime (Fig.~\ref{fig:save}). Alternatively select Save under the File menu.
 
 \begin{figure}
 \begin{center}
