Updated the before we get started

--- a/docs/common/beforeWeGetStarted.tex
+++ b/docs/common/beforeWeGetStarted.tex
@@ -1,3 +1,6 @@
 
-\section{Before we Get Started}
-Before we can do anything with Repast Simphony, we need to make sure that we have a proper installation of the latest version. Instructions on downloading and installing Repast Simphony on various platforms can be found on the \href{https://repast.github.io/download.html}{Repast website}.\footnote{ \href{https://repast.github.io/download.html}{https://repast.github.io/download.html} } Repast Simphony requires Java 8 to be installed. Java can be found at the \href{http://www.oracle.com/technetwork/java/javase/downloads/index.html}{Java Standard Edition Downloads Page}.\footnote{ \href{http://www.oracle.com/technetwork/java/javase/downloads/index.html}{http://www.oracle.com/technetwork/java/javase/downloads/index.html} }
+\section{Before We Get Started}
+Before we can do anything with Repast Simphony, we need to make sure that we have a proper installation
+of the latest version. See the \href{https://repast.github.io/requirements.html}{Repast Requirements
+Web Page} for instructions on downloading and installing Repast Simphony and Java.\footnote
+{ \href{https://repast.github.io/requirements.html}{https://repast.github.io/requirements.html} }
