--- a/docs/RepastNG/browser.adoc
+++ b/docs/RepastNG/browser.adoc
@@ -14,6 +14,8 @@ The browser-based GUI is an alpha level feature in 2.7, and while most, if
 not all, models should load and run, the full array of existing visualizations
 and plots is not yet supported.
 
+For feedback and questions about this browser-based visualization capability please contact us through our https://repast.github.io/support.html[regular support channels].
+
 == Getting Started
 
 . Launch the Repast Simphony Server
@@ -24,8 +26,8 @@ then `Run As`, and then the server entry.
 model's top level project folder, select the `Repast Simphony` menu entry, then `Add Server Launcher`.
 Once the new launcher has been added, right click on it (e.g. `launchers/JZombies_Demo Server.launch`), then
 `Run As`, and then the server entry.
-. When the server starts, you should see the server output in your Eclipse console (e.g. <<img_console>>), and your default browser
-should be a launched with the browser-based GUI displayed. If your default browser, is already
+. When the server starts, you should see the server output in your Eclipse console (e.g. <<img_console,Eclipse console>>), and your default browser
+should be launched with the browser-based GUI displayed. If your default browser, is already
 running then the browser-based GUI will open in a new tab. 
 .. If a browser cannot be launched automatically, open your browser and go to `http://localhost:5000`.
 . Click the `Initialize` button in the top right hand corner to initialize the model, after which the initial displays and 
@@ -35,7 +37,7 @@ run the same model, while changing the parameters etc., by restarting the model 
 after the model has stopped.
 . Click `Quit` to stop the server and quit the model.
 
-[[img_console, Server Console]]
+[[img_console]]
 .Eclipse console with a successful server launch
 image::images/console.png[]
 
@@ -43,15 +45,15 @@ The various parts of the GUI are described in greater detail below.
 
 == The GUI
 
-[[img_gui, Browser GUI]]
+[[img_gui]]
 .Repast Simphony Browser GUI
 image::images/gui.png[]
 
-The GUI is divided into 7 parts, labeled A - G in <<img_gui>>.
+The GUI is divided into 7 parts, labeled A - G in the <<img_gui,browser GUI>>.
 
-A. Toolbar. The `Initialize`, `start`, and `Stop` buttons will initialize, start and stop 
+A. Toolbar. The `Initialize`, `Start`, and `Stop` buttons will initialize, start and stop 
 the model. `Quit` will stop the server and kill any running models. The server must be restarted
-in order to run the model. `Other Stuff - Kill Model,` will kill the model process, 
+in order to run the model. `Other Stuff -> Kill Model,` will kill the model process, 
 and can be used if the GUI becomes unresponsive.
 
 B. Displays. The model visualizations will appear here. A display can be resized
@@ -59,15 +61,17 @@ by dragging the display's black border, and it can be moved by clicking and hold
 on the header of the display (i.e. the darker section at the top of the display containing the
 display's title). In Tabbed layout, clicking on a tab will show the named display.
 
-C. Charts. Any time series charts will appear here. See <<img_charts>> for an example.
+C. Charts. Any time series charts will appear here. See <<img_charts,Chart tabs>> for an example.
 Hover the mouse over a series (e.g. Zombie Count) to see the value at that point. Clicking
 on a tab will display the named chart.
 
-[[img_charts, Charts]]
-.Repast Simphony Charts Example
+[[img_charts]]
+.Repast Simphony Chart Tabs Example
 image::images/charts.png[]
 
-[upperalpha,start=4]
+[upperalpha]
+[start=4]
+
 . Tick count. The tick count is displayed here.
 
 . Model parameters. Edit the model parameters here. The `Reset` button can
@@ -87,19 +91,19 @@ are `Tabbed` and `Freeform`.
 
 The server port (default 5000) and whether to auto-launch a browser when
 the server is launched can be 
-configured in the servers launch configuration. See, for example, <<img_launcher>>.
+configured in the server's launch configuration (see, <<img_launcher,Launcher Configuration>>).
 
-1. Goto to the `Run Menu` - `Run Configurations` (at the bottom of the menu)
+1. Go to the `Run Menu` -> `Run Configurations` (at the bottom of the menu)
 2. Click on the Server launcher you want to edit. 
 3. Click on the Arguments tab
 4. Edit the program arguments. The first argument (e.g. 5000) specifies the server
-port, the second the scenario folder of the model to run, and the 3rd argument
+port, the second the scenario folder of the model to run, and the third argument
 determines whether or not to auto-launch a browser where +true+ means auto-launch.
 
-Note that if you change the server port, then browser will point to a different
+Note that if you change the server port, then the browser will point to a different
 address.
 
-[[img_launcher, Launcher Configuration]]
+[[img_launcher]]
 .Server Launcher Configuration Dialog
 image::images/launcher.png[]
 
