Misc asciidoc formatting

--- a/docs/RepastNG/browser.adoc
+++ b/docs/RepastNG/browser.adoc
@@ -1,4 +1,11 @@
 = Running your Repast Simphony Model via a Browser
+October 2019
+// NO SPACES BETWEEN LEADING TEXT AND : OPTIONS
+:toc:
+:icons:
+:numbered:
+:max-width: 55em
+:website: http://repast.github.io
 
 New in Repast Simphony 2.7 is the ability to run your model using a web browser
 as the user interface. The browser-based GUI has the following features:
