Created pdf for batch run doc

--- a/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
+++ b/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
@@ -645,7 +645,7 @@ To shut down the virtual machine when you no longer need it, you can close the w
 \subsection{Amazon Cloud Services}
 Amazon Elastic Compute Cloud (Amazon EC2) is a web service that provides resizable compute capacity in the cloud. It is designed to make web-scale computing easier for developers. It is possible to use this remote compute capacity to perform remote batch runs. More on Amazon's EC2 can be found at  \href{http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/concepts.html}{http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/concepts.html}.
 
-Amazon EC2 based batch runs begin with setting up a remote machine instance that runs an Amazon Machine Image (AMI). The batch run will login into this instance using SSH and perform the runs on it. The setup only needs to be done once. After that, the instance can be stopped and started as needed. The Amazon EC2 Getting Started docs describe this process: \href{hhttps://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html}{\\https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html}. (Note that Amazon, at the time of writing, has 12 month free tier. See the links in the EC2 Getting Started Guide for more info.) Follow the Getting Started Guide to set up your instance. Choose the 64 bit Ubuntu Server 18.04 LTS (HVM) (figure \ref{fig:ubuntu_ami}) as the Amazon Machine Image (AMI) when creating an instance.
+Amazon EC2 based batch runs begin with setting up a remote machine instance that runs an Amazon Machine Image (AMI). The batch run will login into this instance using SSH and perform the runs on it. The setup only needs to be done once. After that, the instance can be stopped and started as needed. The Amazon EC2 Getting Started docs describe this process: \href{https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2\_GetStarted.html}{https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2\_GetStarted.html}. (Note that Amazon, at the time of writing, has 12 month free tier. See the links in the EC2 Getting Started Guide for more info.) Follow the Getting Started Guide to set up your instance. Choose the 64 bit Ubuntu Server 18.04 LTS (HVM) (figure \ref{fig:ubuntu_ami}) as the Amazon Machine Image (AMI) when creating an instance.
 
 \begin{figure}[h]
 \begin{center}
